tests/snapshots/reads__big_evm_all_relations.snap
---
source: tests/reads.rs
expression: snapshot.trim_end()
---
## json
response 22562400..22562414 n=15 read_through=22562415
read blocks blocks=-..- cols=[hash,number,timestamp] block_column=number at=15:62cbf5594aec461c -> rows=15
read blocks blocks=0..- cols=[number] block_column=number required=[hash,number,timestamp] positions -> rows=1592
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] block_column=block_number at=6420:a375b9151a7957c5 -> rows=6420
read logs blocks=0..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[] positions cached window=0..22562415 -> rows=6902
read logs blocks=22562400..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=6902
read logs blocks=22562400..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=6902
read logs blocks=22562400..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=6902
read statediffs blocks=-..- cols=[address,block_number,key,kind,next,next_size,prev,prev_size,transaction_index] block_column=block_number at=18947:4d4958f086ec6dee -> rows=18947
read statediffs blocks=0..22562415 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] items=[] positions cached window=0..22562415 -> rows=20250
read statediffs blocks=22562400..22562415 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=15874
read statediffs blocks=22562400..22562415 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=20250
read traces blocks=-..- cols=[block_number,call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] block_column=block_number at=18763:046eb4f907025631 -> rows=18763
read traces blocks=0..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] items=[] positions cached window=0..22562415 -> rows=20029
read traces blocks=22562400..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=18325
read traces blocks=22562400..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=20029
read traces blocks=22562400..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=20029
read transactions blocks=-..- cols=[block_number,from,hash,input,input_size,to,transaction_index,value] block_column=block_number at=2571:5ca6b6b0b727d524 -> rows=2571
read transactions blocks=0..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] items=[] positions cached window=0..22562415 -> rows=2774
read transactions blocks=22562400..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=1719
read transactions blocks=22562400..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=2774
read transactions blocks=22562400..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=2774

## json, page 256 KiB
response 22562400..22562400 n=1 read_through=22562415
read blocks blocks=-..- cols=[hash,number,timestamp] block_column=number at=1:c77b3abb6f87acd9 -> rows=1
read blocks blocks=0..- cols=[number] block_column=number required=[hash,number,timestamp] positions -> rows=1592
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] block_column=block_number at=177:e453ddb86b6f0a36 -> rows=177
read logs blocks=0..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[] positions cached window=0..22562415 -> rows=6902
read logs blocks=22562400..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=6902
read logs blocks=22562400..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=6902
read logs blocks=22562400..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=6902
read statediffs blocks=-..- cols=[address,block_number,key,kind,next,next_size,prev,prev_size,transaction_index] block_column=block_number at=578:c10f78322fe29f09 -> rows=578
read statediffs blocks=0..22562415 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] items=[] positions cached window=0..22562415 -> rows=20250
read statediffs blocks=22562400..22562415 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=15874
read statediffs blocks=22562400..22562415 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=20250
read traces blocks=-..- cols=[block_number,call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] block_column=block_number at=479:3ffdd86421feb92e -> rows=479
read traces blocks=0..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] items=[] positions cached window=0..22562415 -> rows=20029
read traces blocks=22562400..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=18325
read traces blocks=22562400..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=20029
read traces blocks=22562400..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=20029
read transactions blocks=-..- cols=[block_number,from,hash,input,input_size,to,transaction_index,value] block_column=block_number at=79:fc5712f6249fac11 -> rows=79
read transactions blocks=0..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] items=[] positions cached window=0..22562415 -> rows=2774
read transactions blocks=22562400..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=1719
read transactions blocks=22562400..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=2774
read transactions blocks=22562400..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=2774

## arrow
response 22562400..22562414 n=15
read blocks blocks=-..- cols=[hash,number,timestamp] block_column=number at=15:62cbf5594aec461c -> rows=15
read blocks blocks=0..- cols=[number] block_column=number required=[hash,number,timestamp] positions -> rows=1592
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] block_column=block_number at=6420:a375b9151a7957c5 -> rows=6420
read logs blocks=0..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[] positions cached window=0..22562415 -> rows=6902
read logs blocks=22562400..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=6902
read logs blocks=22562400..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=6902
read logs blocks=22562400..22562415 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=6902
read statediffs blocks=-..- cols=[address,block_number,key,kind,next,next_size,prev,prev_size,transaction_index] block_column=block_number at=18947:4d4958f086ec6dee -> rows=18947
read statediffs blocks=0..22562415 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] items=[] positions cached window=0..22562415 -> rows=20250
read statediffs blocks=22562400..22562415 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=15874
read statediffs blocks=22562400..22562415 cols=[block_number,next_size,prev_size,transaction_index] block_column=block_number required=[address,key,kind,next,next_size,prev,prev_size,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=20250
read traces blocks=-..- cols=[block_number,call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] block_column=block_number at=18763:046eb4f907025631 -> rows=18763
read traces blocks=0..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] items=[] positions cached window=0..22562415 -> rows=20029
read traces blocks=22562400..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=18325
read traces blocks=22562400..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=20029
read traces blocks=22562400..22562415 cols=[block_number,call_input_size,transaction_index] block_column=block_number required=[call_from,call_input,call_input_size,call_to,call_value,trace_address,transaction_index,type] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=20029
read transactions blocks=-..- cols=[block_number,from,hash,input,input_size,to,transaction_index,value] block_column=block_number at=2571:5ca6b6b0b727d524 -> rows=2571
read transactions blocks=0..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] items=[] positions cached window=0..22562415 -> rows=2774
read transactions blocks=22562400..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=1719
read transactions blocks=22562400..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=2774
read transactions blocks=22562400..22562415 cols=[block_number,input_size,transaction_index] block_column=block_number required=[from,hash,input,input_size,to,transaction_index,value] keys=[block_number,transaction_index] block=block_number as pairs positions cached window=0..22562415 -> rows=2774
